# guanfu

./: README.md  pyproject.toml
guanfu/: __init__.py
guanfu/db/: __init__.py
guanfu/doctype/: __init__.py
guanfu/fieldtype/: __init__.py  bankcard.py  login.py
guanfu/interface/: __init__.py  errors.py  im_api.py  user.py
guanfu/interface/mattermost/: __init__.py
guanfu/utils/: __init__.py  funcs.py  rightsmap.py
tests/fields/: justpy.env  page_bankcard.py  page_bankcardsnapshot.py  page_login.py
tests/utils/: test_utils.py
