[tool.poetry]
name = "guanfu"
version = "0.1.0"
description = "Lite Code Framework for MIS"
authors = ["Zheng, Yang <kevin.cn.zhengyang@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
justpy = "^0.2.3"
pandas = "^1.4.3"
arq = "^0.22"
aiofiles = "^0.8.0"
loguru = "^0.6.0"
asyncpg = "^0.26.0"
orjson = "^3.7.11"
requests = "^2.28.1"
importlib-metadata = "^4.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
